app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: free-file
  labels:
    name: free-file
    environment: production
